hello-k8s-gitops/gitops/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-backend
  namespace: default   
spec:
  selector:
    app: hello-backend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
