hello-k8s-gitops/gitops/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: hello.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: hello-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-frontend
                port:
                  number: 80
